--- a/server/package.json
+++ b/server/package.json
@@ -21,18 +21,24 @@
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "compression": "^1.7.4",
+    "connect-mongo": "^5.0.0",
     "cors": "^2.8.5",
-    "dotenv": "^16.3.1",
+    "dotenv": "^16.6.1",
     "express": "^4.21.2",
     "express-rate-limit": "^6.9.0",
+    "express-session": "^1.17.3",
     "express-validator": "^7.0.1",
     "helmet": "^7.0.0",
     "jsonwebtoken": "^9.0.1",
     "mongoose": "^7.5.0",
     "morgan": "^1.10.0",
-    "nodemailer": "^6.9.7",
-    "express-session": "^1.17.3",
-    "connect-mongo": "^5.0.0"
+    "nodemailer": "^7.0.10",
+    "passport": "^0.6.0",
+    "passport-github2": "^0.1.12",
+    "passport-google-oauth20": "^2.0.0",
+    "passport-linkedin-oauth2": "^2.0.0",
+    "qrcode": "^1.5.3",
+    "speakeasy": "^2.0.0"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
