--- a/server/package.json
+++ b/server/package.json
@@ -23,12 +23,16 @@
     "compression": "^1.7.4",
     "connect-mongo": "^5.0.0",
     "cors": "^2.8.5",
+    "docx": "^9.5.1",
     "dotenv": "^16.6.1",
     "express": "^4.21.2",
     "express-rate-limit": "^6.9.0",
     "express-session": "^1.17.3",
     "express-validator": "^7.0.1",
+    "file-saver": "^2.0.5",
+    "handlebars": "^4.7.8",
     "helmet": "^7.0.0",
+    "html-pdf-node": "^1.0.8",
     "jsonwebtoken": "^9.0.1",
     "mongoose": "^7.5.0",
     "morgan": "^1.10.0",
@@ -37,6 +41,7 @@
     "passport-github2": "^0.1.12",
     "passport-google-oauth20": "^2.0.0",
     "passport-linkedin-oauth2": "^2.0.0",
+    "puppeteer": "^24.27.0",
     "qrcode": "^1.5.3",
     "speakeasy": "^2.0.0"
   },
