--- a/server/package.json
+++ b/server/package.json
@@ -1,7 +1,7 @@
 {
   "name": "resume-builder-server",
   "version": "1.0.0",
-  "description": "Resume Builder Backend API",
+  "description": "GrowZen Backend API",
   "main": "src/server.js",
   "type": "module",
   "scripts": {
